<?xml version="1.0"?>
<package>
  <name>dora_launch</name>
  <version>0.0.0</version>
  <description>The dora_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>p2os_launch</build_depend>
  <run_depend>p2os_launch</run_depend>
  <run_depend>p2os_teleop</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  

</package>